# server

./: .gitignore  .gitmodules  .travis.yml  Cappucino.njsproj  Cappucino.sln  Cargo.toml  Latte.njsproj  Latte.sln  README.md  gulpfile.js  install.sh  install_test.sh  manage.py  package-lock.json  package.json  pom.xml  readme.md  requirements-python2.7.txt  requirements-python3.5.txt  requirements.txt  runserver.sh  server.ts  test.sh  test_inputs.txt
cappuccino/: constants.py  local_settings.py  settings.py  urls.py  wsgi.py
cappuccino/apps/client/: tests.py  urls.py  views.py
cappuccino/apps/command/: CommandFactory.py  CommandResponse.py  FileEntry.py  commands.py  models.py  tests.py  urls.py  views.py
cappuccino/apps/command/modules/: CdCommand.py  CpCommand.py  (+3 more)
cappuccino/apps/download/: views.py
cappuccino/apps/login/: tests.py  views.py
cappuccino/apps/upload/: urls.py  views.py
cappuccino/docs/API/: 1.md  command.md  download.md  upload.md
owndrive/: constants.py  local_settings.py  settings.py  urls.py  wsgi.py
owndrive/apps/client/: urls.py  views.py
owndrive/apps/command/: CommandFactory.py  FileEntry.py  commands.py  models.py  urls.py  views.py
owndrive/apps/download/: urls.py  views.py
owndrive/apps/login/: urls.py  views.py
owndrive/apps/upload/: urls.py  views.py
owndrive/htmldrive/: serializers.py  urls.py  views.py
owndrive/htmldrive/css/: login.css
owndrive/htmldrive/templates/: login.html
src/: app.ts  constants.ts  index.ts  main.rs  shell.ts  tools.ts
src/assets/client/: sample.html
src/routes/: HeroRouter.ts
(+26 files in other folders)
