[package]
name = "pandoro"
version = "0.1.0"
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
glob = "0.3.0"
serde_json = { version = "1.0" }