[package]
name = "pandoro"
version = "0.1.0"
authors = ["Yvan Sraka <yvan@sraka.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
glob = "0.3.0"
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.4"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }